--- a/public/index.html
+++ b/public/index.html
@@ -19,11 +19,11 @@
   <meta name="description" content="uehr's homepage" />
   <meta property="og:title" content="uehr" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://www.uehr.co/" />
-  <meta property="og:image" content="https://www.uehr.co/img/ogp_img.png" />
+  <meta property="og:url" content="%PUBLIC_URL%" />
+  <meta property="og:image" content="%PUBLIC_URL%/ogp.png" />
   <meta property="og:site_name" content="uehr" />
   <meta property="og:description" content="uehr's homepage" />
-  <meta name="twitter:image" content="https://www.uehr.co/img/ogp_img.png" />
+  <meta name="twitter:image" content="%PUBLIC_URL%/ogp.png" />
   <meta name="twitter:card" content="summary" />
   <meta property="fb:admins" content="100002725984412" />
 </head>
