--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,11 @@
   <meta property="og:image" content="%PUBLIC_URL%/ogp.png" />
   <meta property="og:site_name" content="uehr" />
   <meta property="og:description" content="uehr's homepage" />
+  <meta name="twitter:site" content="%PUBLIC_URL%">
   <meta name="twitter:image" content="%PUBLIC_URL%/ogp.png" />
   <meta name="twitter:card" content="summary" />
+  <meta property="twitter:title" content="uehr" />
+  <meta property="twitter:description" content="uehr's homepage" />
   <meta property="fb:admins" content="100002725984412" />
 </head>
 
