update: summarry-large-imageへ

--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,8 @@
   <meta property="og:site_name" content="uehr" />
   <meta property="og:description" content="uehr's homepage" />
   <meta name="twitter:site" content="%PUBLIC_URL%">
-  <meta name="twitter:image" content="%PUBLIC_URL%/ogp.png" />
-  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:image" content="https://www.uehr.co/ogp.png" />
+  <meta name="twitter:card" content="summary_large_image" />
   <meta property="twitter:title" content="uehr" />
   <meta property="twitter:description" content="uehr's homepage" />
   <meta property="fb:admins" content="100002725984412" />
